--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <link href="./styles/main.css" rel="stylesheet">
 </head>
 <body>
-<canvas id="play" width="1400" height="1000"></canvas>
+<canvas width="1400" height="1000"></canvas>
+<audio id="bounce" src="./music/bounce.wav"></audio>
+<audio controls loop id="water" src="./music/water.wav"></audio>
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="./javascript/jquery-3.1.0.min"></script>
-<script   src="http://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
-<script src="./javascript/javascript.js"></script>
+<script src="./javascript/jquery-3.1.0.min.js"></script>
+<script src= "./javascript/javascript.js"></script>
 </body>
 </html>
